# jolonel

./: .gitattributes  .gitignore  Cargo.toml  README.md  structure.md
cli_model/: do_new.rs
migrations/: 20251004163903_create_initial_tables.sql  20251005150336_updated.sql  20251008124819_define_tables.sql  20251015122607_update_scheduled_tasks_table.sql
model_squeal/: new_task.rs
src/: cli.rs  errors.rs  main.rs  models.rs
src/cli_model/: do_new.rs
src/commands/: cmd_do.rs
src/core/: mod.rs
src/core/db/: assemble.rs  main.rs  mod.rs
src/core/lib/: due_helper.rs  events_helper.rs  goal_helper.rs  mod.rs  tag_helper.rs
src/core/schedb/: main.rs  mod.rs  scheduler.rs
src/model_squeal/: insert_task.rs  new_task.rs
src/squeal/: create_tables.rs  create_tables.sql  insert_task.rs  mod.rs
src/squeal/helpers/: assemble.rs  due_helper.rs  events_helper.rs  goal_helper.rs  main.rs  mod.rs  tag_helper.rs
